cmake_minimum_required(VERSION 3.9)
project(Code)

set(CMAKE_CXX_STANDARD 11)

add_executable(Code main.cpp 堆和不相交集数据结构——堆/SIFT-UP.cpp 堆和不相交集数据结构——堆/SIFT-DOWN.cpp 堆和不相交集数据结构——堆/Insert.cpp 堆和不相交集数据结构——堆/Delete.cpp 堆和不相交集数据结构——堆/DeleteMax.cpp 堆和不相交集数据结构——堆/makeheap.cpp 堆和不相交集数据结构——堆/HeapSort.cpp 归纳法/Experc.cpp 归纳法/exp.cpp 归纳法/Horner.cpp 归纳法/MAJORITY.cpp 分治/MaxMin.cpp 分治/BinarySearchRec.cpp 分治/MergeSort.cpp 分治/Select.cpp 分治/QuickSort.cpp 动态规划/Lcs.cpp 回溯算法/ColorRec.cpp 回溯算法/ColorItre.cpp 回溯算法/8QUEENS.cpp 回溯算法/BackTrackRec.cpp 动态规划/Matchain.cpp 动态规划/Floyd.cpp 动态规划/Knapsack.cpp 算法分析基本概念/Linearsearch.cpp 算法分析基本概念/Binarysearch.cpp 算法分析基本概念/Merge.cpp 算法分析基本概念/SelectionSort.cpp 算法分析基本概念/InsertionSort.cpp 算法分析基本概念/BottomUpSort.cpp 随机算法/RandomQuickSort.cpp)